Updated .gitignore, can now output to shift register (74HC595) the last byte for an IPv4.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+byte2led
 # Created by https://www.gitignore.io
 
 ### Vim ###
@@ -7,4 +8,39 @@
 Session.vim
 .netrwhist
 *~
+
+
+### C ###
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
 
